--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "midway-crud-kit",
+  "name": "midway-helper",
   "version": "1.0.0",
   "description": "A reusable CRUD decorator and base service for MidwayJS + TypeORM.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/LBC000/midway-crud-kit"
+    "url": "https://github.com/LBC000/midway-helper"
   },
   "scripts": {
     "build": "tsc"
