--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "midway-helper",
-  "version": "1.0.5",
+  "version": "1.0.9",
   "description": "A reusable CRUD decorator and base service for MidwayJS + TypeORM.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/LBC000/midway-helper"
