--- a/package.json
+++ b/package.json
@@ -1,16 +1,9 @@
 {
   "name": "midway-helper",
-  "version": "1.1.3",
+  "version": "1.1.9",
   "description": "A reusable CRUD decorator and base service for MidwayJS + TypeORM.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    }
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/LBC000/midway-helper"
@@ -18,7 +11,8 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm run clean && tsc",
-    "publish": "npm run clean && tsc && npm publish"
+    "build:publish": "npm run clean && tsc && npm publish",
+    "publish": "npm publish"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +24,7 @@
   "dependencies": {
     "@midwayjs/core": "^3.20.4",
     "@midwayjs/koa": "^3.20.5",
+    "@midwayjs/typeorm": "^3.20.4",
     "dayjs": "^1.11.13",
     "typeorm": "^0.3.25"
   }
